--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,4 +4,4 @@
 		<a href='{{site.url}}' id='logo_docs'>{{site.last_name}}</a>
 </div>
 </div>
-<section id="home-hero"></section>
+<!--<section id="home-hero"></section>-->
