--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -10,7 +10,9 @@
 		<script type="text/javascript" src='/js/highlight.pack.js'></script>
 		<script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 	</head>
-	<body>
+    <body style="
+        background: white;
+        ">
 		<div id='layout'>
 			{% include header.html %}
 
