--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -20,14 +20,14 @@
 			<div style='clear: both'></div>
 		</div>
         <div id="content" style="
-            width: 85%;
+            width: 95%;
             margin: auto;
             ">
 
 			<div id='page'>
 				<h1 id='page-title'>{{page.title}}</h1>
 				{{content}}
-
+{% include share.html %}
 				{% include comment.html %}
 
 			</div>
