--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -24,7 +24,9 @@
             ">
 
 			<div id='page'>
-				<h1 id='page-title'>{{page.title}}</h1>
+                <h1 id="page-title" style="
+                    text-transform: uppercase;
+                    ">{{page.title}}</h1>
 				{{content}}
                 
 				{% include comment.html %}
